--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -482,7 +482,13 @@ body {
     background-repeat: no-repeat;
     margin: 0 auto;
     margin-bottom: 10px;
-    transition: background-color 0.2s ease;
+
+    opacity: 0.4;
+    transition: opacity 0.2s ease;
+
+    &:hover {
+      opacity: 0.7;
+    }   
   }
 }
 
