--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -311,6 +311,16 @@ body {
       font-size: 18px;
     }
   }
+  
+  a {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.2s ease;
+    
+    &:hover {
+      color: #777;
+    };
+  }
 }   
 
 
