--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -251,13 +251,16 @@ body {
     .rc-menu-content {
       font-size: $font-size;
       padding: 0 20px;
-      margin-top: 110px - 13px;
+      margin-top: 110px - 11px;
       line-height: 17px;
       
       h3 {
         font-size: inherit;
         margin: 0;
         color: #222;
+        text-transform: uppercase;
+        font-size: 11px;
+        letter-spacing: 0.0em;
         padding-bottom: 1em;
       }
       
@@ -272,7 +275,7 @@ body {
 
       // Extra space for fingers.
       @media (max-width: $screen-sm-max) {
-        margin-top: 110px - 15px;
+        margin-top: 110px - 11px;
         line-height: 21px;
       }
     }
@@ -319,7 +322,7 @@ body {
     
     &:hover {
       color: #777;
-    };
+    }
   }
 }   
 
