--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "bs";
 @import "variables";
+@import "mixins";
 
 /*
 Pixels	Ems	Ems @ 16	% of 13
@@ -57,13 +58,7 @@ body {
       padding: 0;
       
       a {
-        transition: color 0.2s ease;
-        color: #000;
-        
-        &:hover {
-          color: #7F7F7F;
-          text-decoration: none;
-        }
+        @include link-standard;
       }
     }
   
@@ -175,6 +170,7 @@ body {
   
     height: 100%;
     position: fixed;
+    z-index: 1000;
     pointer-events: none; // Allow events through this element, even though it covers the document.
     
     // Handy for debugging.
@@ -286,9 +282,17 @@ body {
 // Featured Image
 // ============================================================================
 
-.rc-featured-image {
-  margin-bottom: 30px;
-    
+.rc-featured-image {  
+  margin-bottom: 2em;
+
+  @media (min-width: $screen-sm-min) {
+    margin-bottom: 60px;
+  }    
+
+  a {
+    @include link-standard;
+  }
+
   .rc-feat,
   .rc-name {
     display: block;
@@ -314,18 +318,42 @@ body {
       font-size: 18px;
     }
   }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-    transition: color 0.2s ease;
-    
-    &:hover {
-      color: #777;
-    }
-  }
 }   
 
+.rc-index-thumbs {
+  $font-size: 12px;
+
+  max-width: 700px;
+  margin: 0 auto;
+  
+  a {
+    @include link-standard;
+  }
+  
+  img {
+    max-width: 250px;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .rc-title {
+    line-height: 1.2;
+    font-size: $font-size;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 1em;
+    padding-bottom: 1.5em;
+
+    @media (min-width: $screen-sm-min) {
+      font-size: $font-size + 2;
+      padding-top: 1.5em;
+      padding-bottom: 3.5em;
+    }    
+  }
+  
+}
 
 // Gallery
 // ============================================================================
