--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -138,16 +138,17 @@ body {
         margin-top: 7px;
         
         h3 {
-          font-size: inherit;
+          font-size: 13px;
           line-height: 1;
           margin: 0;
-          margin-bottom: 10px;
+          margin-bottom: 18px;
           color: #222;
+          text-transform: uppercase;
         }
       
         ul {
           margin-bottom: 0;
-          padding-bottom: 7px;
+          padding-bottom: 14px;
         }
 
         li {
