--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -82,7 +82,7 @@ body {
       background-color: #B2B2B2;
       transition: background-color 0.2s ease;
       
-      &:hover {
+      &:hover, &:active {
         background-color: #7F7F7F;
       }
     }
@@ -105,7 +105,7 @@ body {
   a {
     color: #666;
 
-    &:hover {
+    &:hover, &:active {
       color: #000;
       text-decoration: none;
     }
@@ -239,7 +239,7 @@ body {
       opacity: 0.4;
       transition: opacity 0.2s ease;
 
-      &:hover {
+      &:hover, &:active {
         opacity: 0.7;
       }   
     }    
@@ -531,7 +531,7 @@ body {
     opacity: 0.4;
     transition: opacity 0.2s ease;
 
-    &:hover {
+    &:hover, &:active {
       opacity: 0.7;
     }   
   }
