--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -17,6 +17,8 @@
     padding-left: 0 !important;
     padding-right: 0 !important;
 
+    // Use `row-no-collapse` to override the default behavior, so that you can
+    // use col-xs-* classes and maintain grid layout.
     .row-no-collapse {
       margin-left: 15px;
       margin-right: 15px;
