clarify that there is no large layout

--- a/src/scss/_bs.scss
+++ b/src/scss/_bs.scss
@@ -37,8 +37,7 @@ $container-sm: (720px + $grid-gutter-width);
 $container-md: (940px + $grid-gutter-width);
 
 // Large screen / wide desktop
-//$container-lg: (1140px + $grid-gutter-width);
-$container-lg: $container-md;
+$container-lg: (1140px + $grid-gutter-width);
 
 
 // Mixins  
