allow multiple lines of text

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -398,7 +398,7 @@ body {
   .rc-copy {
     max-width: 620px;
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 1em auto;
     padding: 0 20px;
 
     // Looks better when the copy is very short.
