style images in searching

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -501,6 +501,13 @@ body {
   }
 }
 
+.rc-searching-gallery-container {
+
+  img {
+    border: 1px solid #eee;
+  }
+}
+
 .rc-firecracker-gallery-container {
   margin-top: 40px;
 
