--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -455,8 +455,12 @@ body {
   }
 
   .rc-feature {
-    margin-top: -2em;
+    margin-top: -1em;
     margin-bottom: 2em;
+
+    @media (min-width: $screen-sm-min) {
+      margin-top: -1.5em;
+    }
   }
 }
 
