inset featured image a bit

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -272,7 +272,9 @@ body {
 // ============================================================================
 
 .rc-featured-image {
-  margin-bottom: 2em;
+  $horizontal-inset: 20px;
+
+  margin: 0 $horizontal-inset 2em $horizontal-inset;
 
   @media (min-width: $screen-sm-min) {
     margin-bottom: 60px;
